compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/WrongTypeName2.kt
package test

import java.util.*

public open class WrongTypeName2 : Object() {
    public open fun foo(p0 : String?) : String? = ""
}
